--- a/src/app/create/download/download.component.html
+++ b/src/app/create/download/download.component.html
@@ -4,6 +4,7 @@
 		<p>{{ getDescription() | translate }}</p>
 
 		<ob-alert type="warning">{{ "certificateCreate.step-four.warning" | translate }}</ob-alert>
+		<ob-alert type="warning" *ngIf="isAntibodyTest()">{{ "certificateCreate.step-four.warningChOnly" }}</ob-alert>
 		<ob-alert type="error" *ngIf="createCertificateResponse?.appDeliveryError">
 			{{
 				"certificateCreate.step-four.app.code.error." + createCertificateResponse?.appDeliveryError?.errorCode
