VACCINECERT-1509 fixed label widths

--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -47,7 +47,7 @@
 
 	<fieldset class="form-group">
 		<legend class="padding-top">{{ "certificateCreate.form.group.test" | translate }}</legend>
-		<label *ngIf="antibody" class="additional-padding">{{
+		<label *ngIf="antibody" class="additional-padding additional-width">{{
 			"certificateCreate.from.label.antibody" | translate
 		}}</label>
 
