VACCINECERT-1626 wrong information text for recovery form got removed

--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -151,7 +151,7 @@
 			<div *ngIf="vaccineForm.get('checkBox').enabled">
 				<mat-checkbox formControlName="checkBox" aria-label="Hint">
 					<span
-						[innerHTML]="'certificateCreate.step-two.nonissuablevaccineproductinformation' | translate"
+						[innerHTML]="('certificateCreate.step-two.entitledtoissueconfirmation' | translate) + ('certificateCreate.step-two.nonissuablevaccineproductinformation' | translate)"
 					></span>
 				</mat-checkbox>
 
