Move tourist certificate to own form

--- a/src/app/create/create/create.component.html
+++ b/src/app/create/create/create.component.html
@@ -20,6 +20,11 @@
 			(back)="resetCalled()"
 			(next)="nextCalled()"
 		></ec-test-form>
+		<ec-tourist-vaccine-form
+			*ngIf="selectedForm === 'vaccination-tourist'"
+			(back)="resetCalled()"
+			(next)="nextCalled()"
+		></ec-tourist-vaccine-form>
 	</mat-step>
 	<mat-step>
 		<ec-shipping (back)="backCalled()" (next)="nextCalled()"></ec-shipping>
