--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -123,29 +123,7 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 
-			<div *ngIf="vaccineForm.get('checkBox').enabled">
-				<mat-checkbox formControlName="checkBox" aria-label="Hint">
-					<span
-						[innerHTML]="'certificateCreate.step-two.nonissuablevaccineproductinformation' | translate"
-					></span>
-				</mat-checkbox>
-
-				<mat-error *ngIf="vaccineForm.get('checkBox').errors?.required" style="margin-left: 25px">
-					{{ "i18n.validation.required" | translate }}
-				</mat-error>
-
-				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px"
-					>>
-					<span obCollapseHeader>
-						{{ "certificateCreate.step-two.moreInfosLabel" | translate }}
-					</span>
-					<p
-						obCollapseMain
-						style="text-align: justify; margin-left: 25px"
-						[innerHTML]="'certificateCreate.step-two.moreInfosMessage' | translate"
-					></p>
-				</ob-collapse>
-			</div>
+			<ec-who-checkbox [formControl]="vaccineForm.get('checkBox')"></ec-who-checkbox>
 		</div>
 	</fieldset>
 
