--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -124,30 +124,7 @@
 			</mat-form-field>
 
 			<div *ngIf="vaccineForm.get('checkBox').enabled">
-				<mat-checkbox formControlName="checkBox" aria-label="Hint">
-					<span
-						[innerHTML]="
-							('certificateCreate.step-two.entitledtoissueconfirmation' | translate) +
-							('certificateCreate.step-two.nonissuablevaccineproductinformation' | translate)
-						"
-					></span>
-				</mat-checkbox>
-
-				<mat-error *ngIf="vaccineForm.get('checkBox').errors?.required" style="margin-left: 25px">
-					{{ "i18n.validation.required" | translate }}
-				</mat-error>
-
-				<ob-collapse column-main-content iconPosition="left" [active]="false" style="margin-left: 25px"
-					>>
-					<span obCollapseHeader>
-						{{ "certificateCreate.step-two.moreInfosLabel" | translate }}
-					</span>
-					<p
-						obCollapseMain
-						style="text-align: justify; margin-left: 25px"
-						[innerHTML]="'certificateCreate.step-two.moreInfosMessage' | translate"
-					></p>
-				</ob-collapse>
+				<ec-who-checkbox [formControl]="vaccineForm.get('checkBox')"></ec-who-checkbox>
 			</div>
 		</div>
 	</fieldset>
