format: clean code

--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -19,9 +19,13 @@
 		<mat-radio-button id="generationType-antibody" value="antibody" name="antibody" class="radio-button">{{
 			"certificateCreate.step-one.enum.antibody" | translate
 		}}</mat-radio-button>
-		<mat-radio-button id="generationType-vaccination-tourist" value="vaccination-tourist" name="vaccination-tourist" class="radio-button">{{
-			"certificateCreate.step-one.enum.vaccination-tourist" | translate
-		}}</mat-radio-button>
+		<mat-radio-button
+			id="generationType-vaccination-tourist"
+			value="vaccination-tourist"
+			name="vaccination-tourist"
+			class="radio-button"
+			>{{ "certificateCreate.step-one.enum.vaccination-tourist" | translate }}</mat-radio-button
+		>
 	</mat-radio-group>
 
 	<div class="stepper-footer">
