add grace-period message and format date
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -109,7 +109,7 @@
 			<p id="gracePeriodMessage" *ngIf="this.testForm.get('product').value?.validUntil">
 				{{
 					"gracePeriodMessage"
-						| obTranslateParams: { validUntil: this.testForm.get("product").value?.validUntil }
+						| obTranslateParams: { validUntil: this.testForm.get("product").value?.validUntil | date:'YYYY-MM-dd' }
 				}}
 			</p>
 
