VACCINECERT-1626 Now who-checkbox component also gets used by recovery certificate form

--- a/src/app/create/components/who-checkbox/who-checkbox.component.html
+++ b/src/app/create/components/who-checkbox/who-checkbox.component.html
@@ -1,10 +1,7 @@
 <section id="who-checkbox" [ngClass]="{ error: hasError }">
 	<mat-checkbox aria-label="Hint" [formControl]="formControl">
 		<span
-			[innerHTML]="
-				('certificateCreate.step-two.entitledtoissueconfirmation' | translate) +
-				('certificateCreate.step-two.nonissuablevaccineproductinformation' | translate)
-			"
+			[innerHTML]="infoText"
 		></span>
 	</mat-checkbox>
 
