--- a/src/app/create/components/personal-data/personal-data.component.html
+++ b/src/app/create/components/personal-data/personal-data.component.html
@@ -1,4 +1,4 @@
-<fieldset id="personal-data" class="personal-data-form-group" [formGroup]="vaccineForm" #formDirective="ngForm">
+<fieldset id="personal-data" class="personal-data-form-group" [formGroup]="vaccineForm" #formDirective="ngForm" obParentFormDirective>
 	<legend class="padding-top">{{ "certificateCreate.form.group.personalData" | translate }}</legend>
 
 	<div class="form-field">
