--- a/src/app/create/recovery-form/recovery-form.component.html
+++ b/src/app/create/recovery-form/recovery-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="recoveryForm" #formDirective="ngForm" (submit)="goNext()" obParentFormDirective>
-	<ec-personal-data></ec-personal-data>
+	<ec-personal-data #recoveryPersonalDataComponent></ec-personal-data>
 	<fieldset class="form-group">
 		<legend class="padding-top">{{ "certificateCreate.form.group.recovery" | translate }}</legend>
 
