--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -26,6 +26,7 @@
 			class="radio-button"
 			>{{ "certificateCreate.step-one.enum.vaccination-tourist" | translate }}</mat-radio-button
 		>
+		<mat-radio-button id="exceptional" value="exceptional" name="exceptional" class="radio-button">Ausnahmezertifikat</mat-radio-button>
 	</mat-radio-group>
 
 	<div class="stepper-footer">
