--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -123,7 +123,11 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 
-			<ec-who-checkbox [formControl]="vaccineForm.get('checkBox')"></ec-who-checkbox>
+			<ec-who-checkbox
+				[formControl]="vaccineForm.get('checkBox')"
+				[infoText]="infoText"
+				[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"
+			></ec-who-checkbox>
 		</div>
 	</fieldset>
 
