--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -124,7 +124,10 @@
 			</mat-form-field>
 
 			<div *ngIf="vaccineForm.get('checkBox').enabled">
-				<ec-who-checkbox [formControl]="vaccineForm.get('checkBox')"></ec-who-checkbox>
+				<ec-who-checkbox
+					[formControl]="vaccineForm.get('checkBox')"
+					[infoText]="infoText"
+					[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"></ec-who-checkbox>
 			</div>
 		</div>
 	</fieldset>
