--- a/src/app/create/components/who-checkbox/who-checkbox.component.html
+++ b/src/app/create/components/who-checkbox/who-checkbox.component.html
@@ -3,14 +3,14 @@
 		<span [innerHTML]="infoText"></span>
 	</mat-checkbox>
 
-	<ob-collapse column-main-content iconPosition="left" [active]="false">
+	<ob-collapse *ngIf="moreInfo" column-main-content iconPosition="left" [active]="false">
 		<span obCollapseHeader class="collapse-header">
 			{{ "certificateCreate.step-two.moreInfosLabel" | translate }}
 		</span>
 		<p
 			class="collapse-content"
 			obCollapseMain
-			[innerHTML]="'certificateCreate.step-two.moreInfosMessage' | translate"
+			[innerHTML]="moreInfo"
 		></p>
 	</ob-collapse>
 
