--- a/src/app/create/exceptional-form/exceptional-form.component.html
+++ b/src/app/create/exceptional-form/exceptional-form.component.html
@@ -49,9 +49,7 @@
 		<legend class="padding-top">Ausnahmezertifikat</legend>
 
 		<div class="form-field">
-			<p class="form-field-info">
-				Datum des Attests oder Beginn der Gültigkeit
-			</p>
+			<p class="form-field-info">Datum des Attests oder Beginn der Gültigkeit</p>
 			<ob-nested-form formControlName="sampleDate" [nestedForm]="datepickerSampleDate.form" obErrorMessages>
 				<ec-datetimepicker
 					#datepickerSampleDate
