--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -127,7 +127,8 @@
 				<ec-who-checkbox
 					[formControl]="vaccineForm.get('checkBox')"
 					[infoText]="infoText"
-					[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"></ec-who-checkbox>
+					[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"
+				></ec-who-checkbox>
 			</div>
 		</div>
 	</fieldset>
