VACCINECERT-1704 Textual changes and date validator fix

--- a/src/app/create/summary/summary.component.html
+++ b/src/app/create/summary/summary.component.html
@@ -84,7 +84,7 @@
 		<dd id="exceptionalValidFrom">{{ patient?.exceptional.sampleDate | date }}</dd>
 		<dt>Für die Zertifikatsausstellung verantwortliche Stelle</dt>
 		<dd id="ExceptionalCenter">{{ patient?.exceptional.center }}</dd>
-		<dt>Ärztliches Attest ausgestellt in</dt>
+		<dt>Medizinisches Attest ausgestellt in</dt>
 		<dd id="countryOfAttestation">CH</dd>
 	</dl>
 </ng-container>
