--- a/src/app/create/summary/summary.component.html
+++ b/src/app/create/summary/summary.component.html
@@ -78,13 +78,13 @@
 </ng-container>
 
 <ng-container *ngIf="patient?.exceptional">
-	<h5>Ausnahmezertifikat</h5>
+	<h5>{{ "certificateCreate.step-one.enum.exceptional" | translate }}</h5>
 	<dl>
-		<dt>Datum des Attests oder Beginn der Gültigkeit</dt>
+		<dt>{{ "certificateCreate.form.label.exceptional.medicalAttestationValidFrom" | translate }}</dt>
 		<dd id="exceptionalValidFrom">{{ patient?.exceptional.sampleDate | date }}</dd>
-		<dt>Für die Zertifikatsausstellung verantwortliche Stelle</dt>
+		<dt>{{ "certificateCreate.form.label.exceptional.responsible" | translate }}</dt>
 		<dd id="ExceptionalCenter">{{ patient?.exceptional.center }}</dd>
-		<dt>Medizinisches Attest ausgestellt in</dt>
+		<dt>{{ "certificateCreate.step-three.attestationCountry" | translate }}</dt>
 		<dd id="countryOfAttestation">CH</dd>
 	</dl>
 </ng-container>
