format: clean code

--- a/src/app/create/exceptional-form/exceptional-form.component.html
+++ b/src/app/create/exceptional-form/exceptional-form.component.html
@@ -49,7 +49,9 @@
 		<legend class="padding-top">{{ "certificateCreate.step-one.enum.exceptional" | translate }}</legend>
 
 		<div class="form-field">
-			<p class="form-field-info">{{ "certificateCreate.form.label.exceptional.medicalAttestationValidFrom" | translate }}</p>
+			<p class="form-field-info">
+				{{ "certificateCreate.form.label.exceptional.medicalAttestationValidFrom" | translate }}
+			</p>
 			<ob-nested-form formControlName="sampleDate" [nestedForm]="datepickerSampleDate.form" obErrorMessages>
 				<ec-datetimepicker
 					#datepickerSampleDate
