--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -28,8 +28,7 @@
 		>
 		<mat-radio-button id="exceptional" value="exceptional" name="exceptional" class="radio-button">{{
 			"certificateCreate.step-one.enum.exceptional" | translate
-			}}</mat-radio-button
-		>
+		}}</mat-radio-button>
 	</mat-radio-group>
 
 	<div class="stepper-footer">
