VACCINECERT-1704 Fixed UI tests

--- a/src/app/create/components/who-checkbox/who-checkbox.component.html
+++ b/src/app/create/components/who-checkbox/who-checkbox.component.html
@@ -1,5 +1,5 @@
 <section id="who-checkbox" [ngClass]="{ error: hasError }">
-	<mat-checkbox aria-label="Hint" [formControl]="formControl">
+	<mat-checkbox aria-label="Hint" [formControl]="control">
 		<span [innerHTML]="infoText"></span>
 	</mat-checkbox>
 
