--- a/src/app/create/exceptional-form/exceptional-form.component.html
+++ b/src/app/create/exceptional-form/exceptional-form.component.html
@@ -84,7 +84,7 @@
 
 			<div *ngIf="exceptionalForm.get('checkBox').enabled">
 				<ec-who-checkbox
-					[formControl]="exceptionalForm.get('checkBox')"
+					[control]="exceptionalForm.get('checkBox')"
 					[infoText]="infoText"
 				></ec-who-checkbox>
 			</div>
