--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -124,7 +124,7 @@
 			</mat-form-field>
 
 			<ec-who-checkbox
-				[formControl]="vaccineForm.get('checkBox')"
+                    [control]="vaccineForm.get('checkBox')"
 				[infoText]="infoText"
 				[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"
 			></ec-who-checkbox>
