--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -125,7 +125,7 @@
 
 			<div *ngIf="vaccineForm.get('checkBox').enabled">
 				<ec-who-checkbox
-					[formControl]="vaccineForm.get('checkBox')"
+                        [control]="vaccineForm.get('checkBox')"
 					[infoText]="infoText"
 					[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"
 				></ec-who-checkbox>
