--- a/src/app/create/exceptional-form/exceptional-form.component.html
+++ b/src/app/create/exceptional-form/exceptional-form.component.html
@@ -61,6 +61,7 @@
 					id="sampleDate"
 					[defaultValue]="getCurrentDate()"
 					[showTime]="false"
+					[minDate]="getMinDate()"
 				>
 				</ec-datetimepicker>
 			</ob-nested-form>
