--- a/src/app/create/vaccine-form/vaccine-form.component.html
+++ b/src/app/create/vaccine-form/vaccine-form.component.html
@@ -28,6 +28,8 @@
 					matInput
 					formControlName="doseNumber"
 					id="doseNumber"
+					min="{{minDose}}"
+					max="{{maxDose}}"
 					obNumberFormat
 					decimals="0"
 				/>
@@ -43,6 +45,8 @@
 					matInput
 					formControlName="totalDoses"
 					id="totalDoses"
+					min="{{minDose}}"
+					max="{{maxDose}}"
 					obNumberFormat
 					decimals="0"
 				/>
