add formatted texts for vaccination info

--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -15,9 +15,7 @@
 			</mat-form-field>
 		</div>
 
-		<p class="form-field-info">
-			<strong>{{ "common.important" | translate }}: </strong>
-			{{ "certificateCreate.step-two.vaccinationinformation" | translate }}
+		<p class="form-field-info" [innerHTML]="'certificateCreate.step-two.vaccinationinformation' | translate ">
 		</p>
 
 		<div class="from">
