format: clean code

--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -15,8 +15,7 @@
 			</mat-form-field>
 		</div>
 
-		<p class="form-field-info" [innerHTML]="'certificateCreate.step-two.vaccinationinformation' | translate ">
-		</p>
+		<p class="form-field-info" [innerHTML]="'certificateCreate.step-two.vaccinationinformation' | translate"></p>
 
 		<div class="from">
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
@@ -26,8 +25,8 @@
 					matInput
 					formControlName="doseNumber"
 					id="doseNumber"
-					min="{{minDose}}"
-					max="{{maxDose}}"
+					min="{{ minDose }}"
+					max="{{ maxDose }}"
 					obNumberFormat
 					decimals="0"
 				/>
@@ -43,8 +42,8 @@
 					matInput
 					formControlName="totalDoses"
 					id="totalDoses"
-					min="{{minDose}}"
-					max="{{maxDose}}"
+					min="{{ minDose }}"
+					max="{{ maxDose }}"
 					obNumberFormat
 					decimals="0"
 				/>
