--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -16,6 +16,9 @@
 			"certificateCreate.step-one.enum.recovery" | translate
 		}}</mat-radio-button>
 		<legend class="group-header">{{ "certificateCreate.step-one.enum.chOnly" | translate }}</legend>
+		<mat-radio-button id="generationType-rapid" value="rapid" name="rapid" class="radio-button">{{
+			"certificateCreate.step-one.enum.rapid" | translate
+		}}</mat-radio-button>
 		<mat-radio-button id="generationType-antibody" value="antibody" name="antibody" class="radio-button">{{
 			"certificateCreate.step-one.enum.antibody" | translate
 		}}</mat-radio-button>
