Adapted backend DTO

--- a/src/app/create/create/create.component.html
+++ b/src/app/create/create/create.component.html
@@ -31,7 +31,7 @@
 			(next)="nextCalled()"
 		></ec-exceptional-form>
 		<ec-test-form
-			*ngIf="selectedForm === 'rapid'"
+			*ngIf="selectedForm === 'recovery-rat'"
 			[antibody]="false"
 			[rapid]="true"
 			(back)="resetCalled()"
