set vaccination information style align-left, sync texts
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -87,6 +87,10 @@
 	text-align: justify;
 }
 
+.form-field-info-vaccination {
+	text-align: left;
+}
+
 .extended-select {
 	max-width: 100% !important;
 }
