Updated translation keys

--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -21,7 +21,7 @@
 			value="recovery-rat"
 			name="recovery-rat"
 			class="radio-button"
-			>{{ "certificateCreate.step-one.enum.rapid" | translate }}</mat-radio-button
+			>{{ "certificateCreate.step-one.enum.recovery-rat" | translate }}</mat-radio-button
 		>
 		<mat-radio-button id="generationType-antibody" value="antibody" name="antibody" class="radio-button">{{
 			"certificateCreate.step-one.enum.antibody" | translate
