--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -7,7 +7,7 @@
 				{{ "certificateCreate.form.group.test" | translate }}
 			</div>
 			<div *ngIf="rapid">
-				{{ "certificateCreate.step-one.enum.rapid" | translate }}
+				{{ "certificateCreate.step-one.enum.recovery-rat" | translate }}
 			</div>
 			<div *ngIf="antibody">
 				{{ "certificateCreate.step-one.enum.antibody" | translate }}
