replace static text with vaccination info component
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -15,10 +15,10 @@
 			</mat-form-field>
 		</div>
 
-		<p
-			class="form-field-info form-field-info-vaccination"
-			[innerHTML]="'certificateCreate.step-two.vaccinationinformation' | translate"
-		></p>
+		<p class="form-field-info-vaccination">
+			<ec-vaccination-important-information>
+			</ec-vaccination-important-information>
+		</p>
 
 		<div class="from">
 			<mat-form-field obErrorMessages class="mat-form-field-lg">
