format: clean code

--- a/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
+++ b/src/app/create/tourist-vaccine-form/tourist-vaccine-form.component.html
@@ -16,8 +16,7 @@
 		</div>
 
 		<p class="form-field-info-vaccination">
-			<ec-vaccination-important-information>
-			</ec-vaccination-important-information>
+			<ec-vaccination-important-information> </ec-vaccination-important-information>
 		</p>
 
 		<div class="from">
